stderr
ChristmasSong.java:14: error: ';' expected
    return createVerseHeader(number) +"\n"+ "A partridge in a pear tree."}
                                                                         ^
1 error
